--- a/heroku.yml
+++ b/heroku.yml
@@ -4,4 +4,4 @@ build:
   languages:
     - python
 run:
-    web: gunicorn -b 0.0.0.0:8000 --access-logfile --reload "app:app"
+    web: gunicorn app:app --log-file -
