--- a/heroku.yml
+++ b/heroku.yml
@@ -4,4 +4,4 @@ build:
   languages:
     - python
 run:
-    web: gunicorn app:app --log-file -
+    web: gunicorn -b 0.0.0.0:$PORT app:app --log-file -
